# xfce4-panel-gtkpopover

./: Makefile.am  build.sh  configure.ac  popover-applet.desktop  popover.vala
